# games101

./: .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  generate_compile_commands.ps1
src/: main.cpp
src/assignment1/: Triangle.cpp  assignment1.cpp  rasterizer.cpp  rasterizer.h
src/assignment2/: Triangle.h  assignment2.cpp  rasterizer.cpp  rasterizer.h
src/assignment3/: Shader.h  Triangle.h  assignment3.cpp  rasterizer.cpp  rasterizer.h
src/assignment5/: Light.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  assignment5.cpp  global.hpp  main.cpp
src/assignment6/: AreaLight.hpp  Bounds3.hpp  Light.hpp  Triangle.hpp  Vector.hpp
